# t2bucket

./: .gitignore  AGENTS.md  CODE_WIKI.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  lib.rs  main.rs  store.rs
src-tauri/src/providers/: cos.rs  mod.rs  s3.rs
src/components/: AppIcon.vue  AppSkeleton.vue  AppToast.vue  ConfirmDialog.vue  EmptyState.vue
src/composables/: useTheme.ts
src/pages/: BucketBrowser.vue  ConnectionForm.vue  HomePage.vue  ObjectPreview.vue
src/router/: index.ts
src/types/: index.ts
