[package]
name = "t2bucket"
version = "0.1.1"
description = "T2Bucket - Cloud Bucket Manager"
authors = ["you"]
edition = "2021"

[lib]
name = "t2bucket_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2"
base64 = "0.22"
aes-gcm = "0.10"
rand = "0.8"
